<resources>
    <string name="app_name">DataGrapher</string>
    <string name="data_grapher">Data Grapher</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="chart">Chart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="designed_tag">Designed by Dayker</string>
    <string name="world">World</string>
    <string name="general">General</string>
    <string name="slice_space">Slice space:</string>
    <string name="_0">0</string>
    <string name="_40">40%</string>
    <string name="background_color">Background color</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="max_angle">Max angle:</string>
    <string name="_360">360°</string>
    <string name="hole">Hole</string>
    <string name="hole_radius">Hole radius:</string>
    <string name="hole_color">Hole color</string>
    <string name="values">Values</string>
    <string name="text_size">Text size:</string>
    <string name="text_color">Text color</string>
    <string name="_12">12</string>
    <string name="bold_text">Bold text</string>
    <string name="italic_text">Italic text</string>
    <string name="labels">Labels</string>
    <string name="appearance">Appearance</string>
    <string name="values_">Values</string>
    <string name="_15">15</string>
    <string name="transparent_circle">Transparent circle</string>
    <string name="_5">5</string>
    <string name="circle_color">Circle color</string>
    <string name="circle_size">Circle size:</string>
    <string name="visibility">Visibility:</string>
    <string name="_255">255</string>
    <string name="center_text">Center text</string>
    <string name="text_radius">Text radius:</string>
    <string name="show_center_text">Show center text</string>
    <string name="center_text_">Center text:</string>
    <string name="set_center_text">Set center text</string>
    <string name="edit_center_text">Edit center text</string>
    <string name="legend">Legend</string>
    <string name="show_legend">Show legend</string>
    <string name="orientation">Orientation</string>
    <string name="form_size">Form size:</string>
    <string name="vertical_position">Vertical place</string>
    <string name="horizontal_position">Horizontal place</string>
    <string name="from_form_to_text">From form to text:</string>
    <string name="_4">4</string>
    <string name="extra_offsets">Extra offsets</string>
    <string name="left">Left:</string>
    <string name="right">Right:</string>
    <string name="top">Top:</string>
    <string name="bottom">Bottom:</string>
    <string name="form">Form</string>
    <string name="horizontal">Horizontal</string>
    <string name="vertical">Vertical</string>
    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="line">Line</string>
    <string name="text_offset">Text offset:</string>
    <string name="use_percentages">Use percentages</string>
    <string name="show_labels">Show labels</string>
    <string name="background_color_pick">Background color:</string>
    <string name="hole_color_pick">Hole color:</string>
    <string name="value_text_color_pick">Value text color:</string>
    <string name="labels_text_color_pick">Label text color:</string>
    <string name="center_text_color_pick">Center text color:</string>
    <string name="circle_color_pick">Circle color:</string>
    <string name="legend_text_color_pick">Legend text color:</string>
    <string name="enter_new_center_text">Enter new center text</string>
    <string name="offsets">Offsets</string>
    <string name="chart_name">Chart name:</string>
    <string name="results">Results</string>
    <string name="edit">Edit</string>
    <string name="_1">№1</string>
    <string name="_40p">40%</string>
    <string name="percentage_symbol">%</string>
    <string name="numero_symbol">№</string>
    <string name="degree_symbol">°</string>
    <string name="confirm">Confirm</string>
    <string name="change_entry">Change entry</string>
    <string name="label">Label:</string>
    <string name="value">Value:</string>
    <string name="percentage">Percentage =</string>
    <string name="color">Color</string>
    <string name="add">Add</string>
    <string name="a_new_entry">new entry</string>
    <string name="add_a_new_entry">Add a new entry</string>
    <string name="change_entry_n">Change entry №</string>
    <string name="pick_color">Select a color</string>
    <string name="delete">Delete</string>
    <string name="set_chart_name">Chart name</string>
    <string name="label_is_empty">The label cannot be empty</string>
    <string name="value_is_0">The value cannot be 0</string>
    <string name="value_is_empty">The value cannot be empty</string>
    <string name="reset">Reset</string>
    <string name="entries">Entries</string>
    <string name="reset_chart">"Resetting the chart"</string>
    <string name="lost_chart_warning">The settings of this chart will be lost!</string>
    <string name="image_saved">The image has been saved to your device</string>
    <string name="image_name">Image name</string>
    <string name="image_saving_error">Error saving the image</string>
    <string name="save_as_image">Save as image</string>
    <string name="image_name_prefix">chart_</string>
    <string name="image_name_postfix">.jpg</string>
    <string name="send_an_image">Send an image</string>
    <string name="file_provider_authority">com.dayker.datagrapher.fileprovider</string>
    <string name="data_grapher_logo">Data Grapher</string>
    <string name="email">Email</string>
    <string name="log_in">Log in!</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in_to_your_account">Log in to your account!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_data_grapher">Sign up to Data Grapher</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_recovery">Password recovery</string>
    <string name="an_email_will_be_sent_to_you_to_reset_your_password">An email will be sent to you to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="web_client_id">777053888290-v8a0c6oclin233shamhv7km4ct7vvhr9.apps.googleusercontent.com</string>
    <string name="charts">Charts</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="message_sent">The message has been sent.</string>
    <string name="invalid_password">The password must consist of at least 6 symbols</string>
    <string name="invalid_email">Invalid mail format</string>
    <string name="invalid_confirmation">Incorrect password confirmation</string>
    <string name="authentication_failed">Authentication failed</string>
</resources>