<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.authorization.AuthorizationFragment">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar_authentication" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/googleSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:src="@drawable/authorization_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="90dp"
            android:src="@drawable/logo_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.17"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_grapher_logo"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLogo" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/googleSignIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="15dp"
        android:background="@drawable/google_sign_in_back"
        app:layout_constraintBottom_toTopOf="@+id/imageBorder">


        <ImageView
            android:id="@+id/imageViewGoogleLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/google_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/majorDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/imageBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:src="@drawable/frame_or"
        app:layout_constraintBottom_toTopOf="@+id/layoutEmail"
        tools:ignore="ContentDescription" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="15dp"
        app:helperTextTextColor="@color/majorRed"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/layoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/majorDark" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="15dp"
        app:helperTextTextColor="@color/majorRed"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/tvForgotPassword"
        tools:layout_editor_absoluteX="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/majorDark" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="15dp"
        android:text="@string/forgot_password"
        android:textColor="@color/minorGray"
        app:layout_constraintBottom_toTopOf="@+id/btnLogIn"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/majorDark"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/minorGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.344"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSingUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="30dp"
        android:text="@string/sign_up"
        android:textColor="@color/majorRed"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvQuestion" />


</androidx.constraintlayout.widget.ConstraintLayout>