<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.authorization.AuthorizationFragment">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar_authentication" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="30dp"
        android:src="@drawable/logo_red"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="15dp"
        android:text="@string/password_recovery"
        android:textColor="@color/majorDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutEmail"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="20dp"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/majorRed"
        app:layout_constraintBottom_toTopOf="@+id/tvReset">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/majorDark" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="20dp"
        android:background="@drawable/reset_message_background"
        android:padding="15dp"
        android:text="@string/an_email_will_be_sent_to_you_to_reset_your_password"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="155dp"
        android:backgroundTint="@color/majorRed"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>