<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.authorization.AuthorizationFragment">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar_authentication" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="25dp"
        android:paddingTop="20dp"
        android:src="@drawable/logo_red"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="15dp"
        android:text="@string/sign_up_to_data_grapher"
        android:textColor="@color/majorDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutEmail"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="15dp"
        app:endIconMode="clear_text"
        app:helperTextTextColor="@color/majorRed"
        app:layout_constraintBottom_toTopOf="@+id/layoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/majorDark" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="15dp"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/majorRed"
        app:layout_constraintBottom_toTopOf="@+id/layoutPasswordConfirmation"
        tools:layout_editor_absoluteX="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/majorDark" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPasswordConfirmation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="15dp"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/majorRed"
        app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
        tools:layout_editor_absoluteX="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/majorDark" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/majorRed"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageBorder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:src="@drawable/frame_or"
        app:layout_constraintBottom_toTopOf="@+id/googleSignIn"
        tools:ignore="ContentDescription" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/googleSignIn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/sign_field_margin"
        android:layout_marginEnd="@dimen/sign_field_margin"
        android:layout_marginBottom="35dp"
        android:background="@drawable/google_sign_in_back"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:id="@+id/imageViewGoogleLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:src="@drawable/google_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/majorDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>